--- a/index.html
+++ b/index.html
@@ -88,12 +88,14 @@
                         <div class="text">
                             <p>PHOTOGRAPHY/FLOWER</p>
                             <h4>FLOWER IN DOOR</h4>
-                        </div>
+                        </div>git initial-scaleg
                         <img src="./assets/images/christoph-schulz-wJ6xyh1YMxU-unsplash.jpg" alt="">
                     </div>
                     <div class="col">
-                        <p>PHOTOGRAPHY/FLOWER</p>
-                        <h4>FLOWER IN DOOR</h4>
+                        <div class="text">
+                            <p>PHOTOGRAPHY/FLOWER</p>
+                            <h4>FLOWER IN DOOR</h4>
+                        </div>
                         <img src="./assets/images/engin-akyurt-KdqUaN_YA0c-unsplash.jpg" alt="">
                     </div>
                     <div class="col">
