--- a/index.html
+++ b/index.html
@@ -47,15 +47,15 @@
         <div id="page2">
             <div id="image-container">
                 <div class="row">
-                    <div class="col">
+                    <div class="col wide">
                         <div class="text">
                             <p>PHOTOGRAPHY/FLOWER</p>
                             <h4>FLOWER IN DOOR</h4>
                         </div>
                         <img src="./assets/images/alexandra-68nHppprubc-unsplash.jpg" alt="">
                     </div>
-                    <div class="col">
-                        <div class="text">
+                    <div class="col short">
+                        <div class="text short">
                             <p>PHOTOGRAPHY/FLOWER</p>
                             <h4>FLOWER IN DOOR</h4>
                         </div>
@@ -77,14 +77,14 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col">
+                    <div class="col short">
                         <div class="text">
                             <p>PHOTOGRAPHY/FLOWER</p>
                             <h4>FLOWER IN DOOR</h4>
                         </div>
                         <img src="./assets/images/brooke-lark-atzWFItRHy8-unsplash.jpg" alt="">
                     </div>
-                    <div class="col">
+                    <div class="col wide">
                         <div class="text">
                             <p>PHOTOGRAPHY/FLOWER</p>
                             <h4>FLOWER IN DOOR</h4>
@@ -107,21 +107,21 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col">
+                    <div class="col short">
                         <div class="text">
                             <p>PHOTOGRAPHY/FLOWER</p>
                             <h4>FLOWER IN DOOR</h4>
                         </div>
                         <img src="./assets/images/honza-vojtek-A39EqNtDpZs-unsplash.jpg" alt="">
                     </div>
-                    <div class="col">
+                    <div class="col wide">
                         <div class="text">
                             <p>PHOTOGRAPHY/FLOWER</p>
                             <h4>FLOWER IN DOOR</h4>
                         </div>
                         <img src="./assets/images/inna-ko-mPU41vaFzKI-unsplash.jpg" alt="">
                     </div>
-                    <div class="col">
+                    <div class="col wide">
                         <div class="text">
                             <p>PHOTOGRAPHY/FLOWER</p>
                             <h4>FLOWER IN DOOR</h4>
@@ -136,7 +136,7 @@
                         <img src="./assets/images/kyler-boone-4bY-VkQ0UZQ-unsplash.jpg" alt="">
                     </div>
                 </div>
-                <div class="row">
+                <div class="row short">
                     <div class="col">
                         <div class="text">
                             <p>PHOTOGRAPHY/FLOWER</p>
@@ -144,7 +144,7 @@
                         </div>
                         <img src="./assets/images/alice-fKfYAbf9RcA-unsplash.jpg" alt="">
                     </div>
-                    <div class="col">
+                    <div class="col wide">
                         <div class="text">
                             <p>PHOTOGRAPHY/FLOWER</p>
                             <h4>FLOWER IN DOOR</h4>
@@ -152,13 +152,13 @@
                         <img src="./assets/images/mathieu-gauzy-G-4fDnINmjc-unsplash.jpg" alt="">
                     </div>
                     <div class="col">
-                        <div class="text">
+                        <div class="text wide">
                             <p>PHOTOGRAPHY/FLOWER</p>
                             <h4>FLOWER IN DOOR</h4>
                         </div>
                         <img src="./assets/images/mathieu-gauzy-mXjOa5fvI8E-unsplash.jpg" alt="">
                     </div>
-                    <div class="col">
+                    <div class="col short">
                         <div class="text">
                             <p>PHOTOGRAPHY/FLOWER</p>
                             <h4>FLOWER IN DOOR</h4>
