--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         <img src="./assets/images/alexandra-68nHppprubc-unsplash.jpg" alt="">
                     </div>
                     <div class="col short">
-                        <div class="textgit i">
+                        <div class="text">
                             <p>PHOTOGRAPHY/FLOWER</p>
                             <h4>FLOWER IN DOOR</h4>
                         </div>
